:art: Fix the header style for letter spacing

--- a/framework-plugins/lisk-framework-dashboard-plugin/src/ui/components/widget/Widget.module.scss
+++ b/framework-plugins/lisk-framework-dashboard-plugin/src/ui/components/widget/Widget.module.scss
@@ -13,6 +13,7 @@
 	font-weight: 600;
 	font-size: 20px;
 	line-height: 130%;
+	letter-spacing: 0.230769px;
 	color: $color-white;
 }
 
